@@ -1,3 +1,9 @@
+2008-10-20		olivier
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c,
+	  po/xfce4-settings.pot: Add a dialog box to warn user that the session
+	  needs to be restarted when selecting system defaults.
+
 2008-10-18		olivier
 
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c,
